--- a/index.html
+++ b/index.html
@@ -481,6 +481,33 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-open"></div>
+    <div class="backdrop is-open">
+      <div class="modal">
+        <button class="modal-btn" type="button" aria-label="Modal close button">
+          <svg class="modal-btn-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-caption">
+          Leave your contacts and we will call you back
+        </p>
+        <form class="modal-form form" name="modal">
+          <label class="form-label" for="user_name">Name</label>
+          <div class="form-field">
+            <input
+              class="form-input"
+              type="text"
+              id="user_name"
+              name="user_name"
+            />
+            <svg class="form-icon" width="18" height="18">
+              <use href="./images/icons.svg#icon-user"></use>
+            </svg>
+          </div>
+
+          <button type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
