--- a/index.html
+++ b/index.html
@@ -481,6 +481,7 @@
         </div>
       </div>
     </footer>
+    <!-- Modal Form -->
     <div class="backdrop is-open">
       <div class="modal">
         <button class="modal-btn" type="button" aria-label="Modal close button">
@@ -492,20 +493,78 @@
           Leave your contacts and we will call you back
         </p>
         <form class="modal-form form" name="modal">
-          <label class="form-label" for="user_name">Name</label>
-          <div class="form-field">
-            <input
-              class="form-input"
-              type="text"
-              id="user_name"
-              name="user_name"
-            />
-            <svg class="form-icon" width="18" height="18">
-              <use href="./images/icons.svg#icon-user"></use>
-            </svg>
+          <div class="madal-wrapper">
+            <label class="form-label" for="user_name">Name</label>
+            <div class="form-field">
+              <input
+                class="form-input"
+                type="text"
+                id="user_name"
+                name="user_name"
+              />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-user"></use>
+              </svg>
+            </div>
           </div>
-
-          <button type="submit">Send</button>
+          <div class="modal-wrapper">
+            <label class="form-label" for="user-phone">Phone</label>
+            <div class="form-field">
+              <input
+                class="form-input"
+                type="tel"
+                name="user-phone"
+                id="user-phone"
+              />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-wrapper">
+            <label class="form-label" for="user-email">Email</label>
+            <div class="form-field">
+              <input
+                class="form-input"
+                type="email"
+                name="user-email"
+                id="user-email"
+              />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-mail"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-wrapper comment">
+            <label for="user-comment" class="form-label">Comment</label>
+            <textarea
+              name="user-comment"
+              id="user-comment"
+              cols="30"
+              rows="10"
+              class="textarea-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="modal-wrapper-accept">
+            <input
+              class="footer-checkbox visually-hidden"
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
+            />
+            <label for="user-privacy" class="user-privacy">
+              <span class="checkbox-span">
+                <svg width="10" height="8">
+                  <use href="./images/icons.svg#icon-checkbox"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="" class="footer-checkbox-link">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="modal-send" type="submit">Send</button>
         </form>
       </div>
     </div>
