--- a/index.html
+++ b/index.html
@@ -468,6 +468,7 @@
               <input
                 class="subscribe-form-input"
                 type="email"
+                name="subscribe"
                 placeholder="E-mail"
               />
             </label>
