--- a/index.html
+++ b/index.html
@@ -494,14 +494,14 @@
           Leave your contacts and we will call you back
         </p>
         <form class="modal-form form" name="modal">
-          <div class="madal-wrapper">
-            <label class="form-label" for="user_name">Name</label>
+          <div class="modal-wrapper">
+            <label class="form-label" for="user-name">Name</label>
             <div class="form-field">
               <input
                 class="form-input"
                 type="text"
-                id="user_name"
-                name="user_name"
+                id="user-name"
+                name="user-name"
               />
               <svg class="form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-user"></use>
