--- a/index.html
+++ b/index.html
@@ -313,8 +313,8 @@
                 </p>
               </div>
               <div class="op-name">
-                <h3 class="list-title">Banking App</h3>
-                <p class="list-text">App</p>
+                <h3 class="list-title-por">Banking App</h3>
+                <p class="list-text-por">App</p>
               </div>
             </li>
             <li class="op-img">
@@ -332,8 +332,8 @@
                 </p>
               </div>
               <div class="op-name">
-                <h3 class="list-title">Cashless Payment</h3>
-                <p class="list-text">Marketing</p>
+                <h3 class="list-title-por">Cashless Payment</h3>
+                <p class="list-text-por">Marketing</p>
               </div>
             </li>
             <li class="op-img">
@@ -351,8 +351,8 @@
                 </p>
               </div>
               <div class="op-name">
-                <h3 class="list-title">Meditation App</h3>
-                <p class="list-text">App</p>
+                <h3 class="list-title-por">Meditation App</h3>
+                <p class="list-text-por">App</p>
               </div>
             </li>
             <li class="op-img">
@@ -370,8 +370,8 @@
                 </p>
               </div>
               <div class="op-name">
-                <h3 class="list-title">Taxi Service</h3>
-                <p class="list-text">Marketing</p>
+                <h3 class="list-title-por">Taxi Service</h3>
+                <p class="list-text-por">Marketing</p>
               </div>
             </li>
             <li class="op-img">
@@ -389,8 +389,8 @@
                 </p>
               </div>
               <div class="op-name">
-                <h3 class="list-title">Screen Illustrations</h3>
-                <p class="list-text">Design</p>
+                <h3 class="list-title-por">Screen Illustrations</h3>
+                <p class="list-text-por">Design</p>
               </div>
             </li>
             <li class="op-img">
@@ -408,8 +408,8 @@
                 </p>
               </div>
               <div class="op-name">
-                <h3 class="list-title">Online Courses</h3>
-                <p class="list-text">Marketing</p>
+                <h3 class="list-title-por">Online Courses</h3>
+                <p class="list-text-por">Marketing</p>
               </div>
             </li>
           </ul>
