--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
       </div>
     </footer>
     <!-- Modal Form -->
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="modal-btn" type="button" aria-label="Modal close button">
           <svg class="modal-btn-icon" width="8" height="8">
